--- a/app/src/main/res/layout/widget_event_list_item.xml
+++ b/app/src/main/res/layout/widget_event_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/event_item_cardView"
     android:layout_width="match_parent"
@@ -152,4 +152,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</RelativeLayout>
