--- a/app/src/main/res/layout/widget_event_list_item.xml
+++ b/app/src/main/res/layout/widget_event_list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/event_item_cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:layout_margin="10dp"
     app:cardCornerRadius="2dp">
 
@@ -28,7 +28,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <View
+            <FrameLayout
                 android:id="@+id/divider1"
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
