--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -6,11 +6,13 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        android:visible="false"
         app:showAsAction="never" />
     <item
-        android:id="@+id/addParticipantsMenu"
+        android:id="@+id/timeLineStatistics"
         android:icon="@drawable/ic_chart_scatterplot_hexbin_white_36dp"
         android:orderInCategory="100"
         android:title="@string/statistics_for_the_week"
+        android:visible="false"
         app:showAsAction="collapseActionView|ifRoom" />
 </menu>
