--- a/app/src/main/res/layout/event_recycler_item.xml
+++ b/app/src/main/res/layout/event_recycler_item.xml
@@ -1,155 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/event_item_cardView"
+    android:id="@+id/selectionIndicatorLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="2dp">
+    android:layout_height="wrap_content">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/event_item_cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
+        android:layout_margin="10dp"
+        app:cardCornerRadius="2dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp">
+            android:layout_margin="5dp"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/eventNameTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="2dp"
-                android:text="@string/event_name"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/divider1"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_below="@+id/eventNameTV"
-                android:layout_margin="2dp"
-                android:background="@android:color/darker_gray" />
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp">
+
+                <TextView
+                    android:id="@+id/eventNameTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="2dp"
+                    android:text="@string/event_name"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <View
+                    android:id="@+id/divider1"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_below="@+id/eventNameTV"
+                    android:layout_margin="2dp"
+                    android:background="@android:color/darker_gray" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/divider1"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="2dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/eventTypeTV"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/event_type"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/creationDateTV"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/date_pattern"
+                        android:textSize="15sp" />
+                </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/divider1"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="2dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:gravity="center">
 
                 <TextView
-                    android:id="@+id/eventTypeTV"
+                    android:id="@+id/numInstancesTV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="@string/event_type"
+                    android:text="@string/num_instances"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/creationDateTV"
+                    android:id="@+id/numParticipantsTV"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="@string/date_pattern"
-                    android:textSize="15sp" />
+                    android:text="@string/num_participants"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
             </LinearLayout>
-        </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/numInstancesTV"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_margin="2dp"
-                android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/num_instances"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:visibility="gone">
 
-            <TextView
-                android:id="@+id/numParticipantsTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/num_participants"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/statisticsImageView"
+                    android:layout_width="0dp"
+                    android:layout_height="24dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_chart_scatterplot_hexbin_grey600_36dp" />
+
+                <ImageView
+                    android:id="@+id/editImageView"
+                    android:layout_width="0dp"
+                    android:layout_height="24dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_toEndOf="@+id/statisticsImageView"
+                    android:layout_toRightOf="@+id/statisticsImageView"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_pencil_grey600_36dp" />
+
+                <ImageView
+                    android:id="@+id/deleteImageView"
+                    android:layout_width="0dp"
+                    android:layout_height="24dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_toEndOf="@+id/editImageView"
+                    android:layout_toRightOf="@+id/editImageView"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_delete_grey600_36dp" />
+
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="2dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <ImageView
-                android:id="@+id/statisticsImageView"
-                android:layout_width="0dp"
-                android:layout_height="24dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="2dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_chart_scatterplot_hexbin_grey600_36dp" />
-
-            <ImageView
-                android:id="@+id/editImageView"
-                android:layout_width="0dp"
-                android:layout_height="24dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/statisticsImageView"
-                android:layout_toRightOf="@+id/statisticsImageView"
-                android:layout_weight="1"
-                android:src="@drawable/ic_pencil_grey600_36dp" />
-
-            <ImageView
-                android:id="@+id/deleteImageView"
-                android:layout_width="0dp"
-                android:layout_height="24dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/editImageView"
-                android:layout_toRightOf="@+id/editImageView"
-                android:layout_weight="1"
-                android:src="@drawable/ic_delete_grey600_36dp" />
-
-        </LinearLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</RelativeLayout>
