--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
@@ -26,12 +27,48 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="16dp" />
 
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_below="@+id/sign_in_button"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
+        android:textAllCaps="false"
+        android:textOff="@string/switch_text_admin"
+        android:textOn="@string/switch_text_attendee" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/forwardProceedCardView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/toggleButton"
+        android:layout_centerHorizontal="true"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/nextStepsImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/continue_with_app"
+            android:src="@drawable/ic_arrow_forward_white_36dp"
+            android:tint="@color/colorPrimaryDark" />
+    </android.support.v7.widget.CardView>
+
     <TextView
         android:id="@+id/skipTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_in_button"
+        android:layout_below="@+id/forwardProceedCardView"
         android:layout_margin="20dp"
+        android:contentDescription="@string/skip_button_content_desc"
         android:gravity="center"
         android:text="@string/skip"
         android:textColor="@color/white"
